force-app/main/default/objects/Funding_Source__c/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>