force-app/main/default/objects/Funding_Source__c/fields/Buyer_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_ID__c</fullName>
    <label>Buyer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>