force-app/main/default/objects/Funding_Source__c/fields/Market_Focus__c.field-meta.xml
<CustomField>
    <fullName>Market_Focus__c</fullName>
    <label>Market Focus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>