force-app/main/default/objects/Funding_Source__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>Project ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>