force-app/main/default/objects/Funding_Source__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <label>Solicitation</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipName>Solicitations_Fundings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>